2007-08-17  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-daemon.c: (initialize_modules), (start_modules),
	(stop_modules), (finalize), (gnome_settings_daemon_init),
	(gnome_settings_daemon_new): use a list instead of a hash table to
	store the settings modules (closes bug #449118)

2007-07-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-xsettings.c:
	(gnome_settings_module_xsettings_initialize): don't forget the Xft
	callback (fixes bug #455992)

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Grzegorz Dymarek <gregd@interia.pl>

	* gnome-settings-multimedia-keys.c: (do_sound_action): don't
	unmute when lowering the volume and switch to muted when the
	volume reaches 0 (closes bug #337896)

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-background.c:
	(gnome_settings_module_background_start): if we don't take over
	the background because nautilus is running, don't treat that as
	an error

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-accessibility-keyboard.c:
	(gnome_settings_module_accessibility_keyboard_get_type):
	* gnome-settings-background.c:
	(gnome_settings_module_background_get_type):
	* gnome-settings-clipboard.c:
	(gnome_settings_module_clipboard_get_type):
	* gnome-settings-default-editor.c:
	(gnome_settings_module_default_editor_get_type):
	* gnome-settings-font.c: (gnome_settings_module_font_get_type):
	* gnome-settings-gtk1theme.c:
	(gnome_settings_module_gtk1_get_type):
	* gnome-settings-keybindings.c:
	(gnome_settings_module_keybindings_get_type):
	* gnome-settings-keyboard.c:
	(gnome_settings_module_keyboard_get_type):
	* gnome-settings-module.c: (gnome_settings_module_get_type):
	* gnome-settings-mouse.c: (gnome_settings_module_mouse_get_type):
	* gnome-settings-multimedia-keys.c:
	(gnome_settings_module_multimedia_keys_get_type):
	* gnome-settings-screensaver.c:
	(gnome_settings_module_screensaver_get_type):
	* gnome-settings-sound.c: (gnome_settings_module_sound_get_type):